Add Netlify configuration for deployment

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start-pwa": "http-server -p 8080 -c-1 .dist/geo-app",
+    "start-pwa": "http-server -a 0.0.0.0 -p 8080 -c-1 dist/geo-app/browser",
     "start-noreload": "ng serve --live-reload=false",
     "start-hot": "NG_HMR_TEMPLATES=1 ng serve",
     "start-cold": "ng serve --no-hmr",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build-pwa": "ng build --configuration production",
@@ -35,6 +35,7 @@
     "@angular/service-worker": "^19.0.3",
     "@angular/ssr": "^19.0.2",
     "@auth0/angular-jwt": "^5.2.0",
+    "@capacitor/core": "^7.4.4",
     "@capacitor/geolocation": "^6.0.2",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@ngneat/until-destroy": "^10.0.0",
